# dshield-mcp

./: .coveragerc  .cursorrules  .env-example  .gh-issue-logging.md  .gh-issue-tech-debt.md  .gitignore  .readthedocs.yaml  .slice  .slice2_clean  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_CLEANUP_REPORT.md  Claude  Enhancements.md  GITHUB_ISSUE_COMMENT.md  GITHUB_ISSUE_COMMENT_CAMPAIGN_ANALYSIS.md  IMPLEMENTATION_PLAN_ISSUE_11.md  INDEX.md  LICENSE  PR_BODY.md  README.md  RELEASE_NOTES_v1.0.md  TCP_TUI_VALIDATION_REPORT.md  USAGE.md  activate_venv.bat  activate_venv.sh  cleanup_report.py  commit_changes.sh  config.py  cursor_metrics.md  debug_elasticsearch.py  env.example  mcp_server.py  mcp_test_client.py  minimal_test.py  mypy.ini  pydoc-markdown.yml  pyproject.toml  pytest.ini  (+20 more)
.cursor/rules/: aa-branch-mgmt.mdc  aa-config-mgmt.mdc  aa-docs.mdc  aa-github-pr.mdc  aa-optimize.mdc  aa-snyk.mdc  ab-error-hand.mdc  ab-modular-design.mdc  ab-secrets-mgmt.mdc  ac-structure.mdc  backend_structure_document.mdc  cursor_project_rules.mdc  frontend_guidelines_document.mdc  project_requirements_document.mdc  py-docs-rule.mdc  security_guideline_document.mdc  tech_stack_document.mdc
.github/workflows/: security-scan.yml
artifacts/: .slice2  .slice2a  .slice2b  .slice2b1  .slice_clean  00_nodes.sha1  pytest.nodes
docs/: API_DOCUMENTATION.md  ATTACK_REPORT_FIX_IMPLEMENTATION.md  CAMPAIGN_ANALYSIS_BUG_REPORT.md  CAMPAIGN_ANALYSIS_DEBUGGING.md  CAMPAIGN_ANALYSIS_IMPLEMENTATION.md  CAMPAIGN_ANALYSIS_PROGRESS_SUMMARY.md  CHANGELOG.md  CODE_QUALITY_CLEANUP_REPORT.md  DEV_TOOLS_MIGRATION_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  ERROR_HANDLING_CONFIGURATION_GUIDE.md  ERROR_HANDLING_TROUBLESHOOTING_GUIDE.md  ERROR_HANDLING_USER_GUIDE.md  Enhancements.md  GITHUB_ISSUE_TRACKING_SUMMARY.md  GITHUB_WORKFLOW_SUMMARY.md  IMPORT_ERROR_BUG_REPORT.md  MCP_SHIELD_INTEGRATION_ANALYSIS.md  OUTPUT_DIRECTORY_CONFIGURATION.md  PAGINATION_IMPLEMENTATION.md  README.md  RELEASE_NOTES_v1.0.md  SECURITY_TEST_AUDIT.md  SECURITY_TEST_QUALITY_FIXED.md  SPHINX_README.md  STEP1_TUI_TESTS_FIXED.md  STEP2_CONNECTION_MANAGER_COMPLETED.md  STEP3_SECURITY_TESTS_PROGRESS.md  STEP4_TCP_SERVER_TESTS_PROGRESS.md  STREAMING_IMPLEMENTATION.md  TCP_TUI_VALIDATION_FINAL_REPORT.md  TEST_COVERAGE_PROGRESS_REPORT.md  TEXTUAL_TYPING_ISSUES.md  USAGE.md  coverage_worklist.md  performance_metrics.md  requirements.txt
docs/Archived/: BUG_003_SEED_EVENT_RETRIEVAL_FIX_IMPLEMENTATION.md  CAMPAIGN_ANALYSIS_BUG_REPORT.md  CAMPAIGN_ANALYSIS_DEBUGGING.md  CAMPAIGN_ANALYSIS_PROGRESS_SUMMARY.md  DEV_TOOLS_MIGRATION_PLAN.md  GITHUB_ISSUE_COMMENT_CAMPAIGN_ANALYSIS.md  GITHUB_ISSUE_TRACKING_SUMMARY.md  GITHUB_WORKFLOW_SUMMARY.md  GRACEFUL_DEGRADATION_PLAN.md  IMPORT_ERROR_BUG_REPORT.md  IMPORT_ERROR_FIX_SUMMARY.md  TCP_TUI_VALIDATION_FINAL_REPORT.md  TCP_TUI_VALIDATION_REPORT.md
docs/Implementation_Docs/: API_KEY_MANAGEMENT_IMPLEMENTATION.md  ATTACK_REPORT_FIX_IMPLEMENTATION.md  CAMPAIGN_ANALYSIS_IMPLEMENTATION.md  DOCUMENTATION_ENHANCEMENT_PLAN.md  DOCUMENTATION_UPDATE_WORK_PLAN.md  ENHANCED_THREAT_INTELLIGENCE_IMPLEMENTATION.diff  ENHANCED_THREAT_INTELLIGENCE_IMPLEMENTATION.md  IMPLEMENTATION_PLAN_ISSUE_11_CAMPAIGN_ANALYSIS.md  ISSUE_58_JSON_RPC_ERROR_HANDLING_IMPLEMENTATION.md  ISSUE_99_DATA_AVAILABILITY_DIAGNOSTICS_IMPLEMENTATION.md  LATEX_TEMPLATE_AUTOMATION_IMPLEMENTATION.md  MCP_TOOL_OBJECT_MIGRATION.md  PAGINATION_IMPLEMENTATION.md  SECURITY_HARDENING_IMPLEMENTATION.md  STATISTICAL_ANOMALY_DETECTION_IMPLEMENTATION.md  STREAMING_IMPLEMENTATION.md  TCP_TRANSPORT_AND_TUI_IMPLEMENTATION_PLAN.md  TCP_TUI_DEVELOPMENT_LOG.md  TCP_TUI_IMPLEMENTATION_SUMMARY.md  performance_metrics.md  smart_chunking_session_context.md
docs/api/: README.md  index.html  search.js  src.html
docs/source/: conf.py  enhancements.md  index.rst  release-notes.md
examples/: __init__.py  basic_usage.py  data_dictionary_usage.py  enhanced_threat_intelligence_usage.py  latex_template_usage.py  statistical_anomaly_detection_usage.py
scripts/: build_api_docs.py  build_api_docs.sh  security_scan.py
src/: __init__.py  api_key_generator.py  campaign_analyzer.py  campaign_mcp_tools.py  config_loader.py  connection_manager.py  context_injector.py  data_dictionary.py  data_processor.py  dshield_client.py  dynamic_tool_registry.py  elasticsearch_client.py  feature_manager.py  health_check_manager.py  latex_template_tools.py  mcp_error_handler.py  models.py  op_secrets.py  operation_tracker.py  resource_manager.py  security_validator.py  server_launcher.py  signal_handler.py  statistical_analysis_tools.py  tcp_auth.py  tcp_security.py  tcp_server.py  threat_intelligence_manager.py  tui_launcher.py  user_config.py
src/mcp_tools/: __init__.py
src/secrets/: __init__.py  base_secrets_manager.py  onepassword_cli_manager.py
src/secrets_manager/: __init__.py  base_secrets_manager.py  onepassword_cli_manager.py
src/security/: mcp_schema_validator.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_api_key_generator.py  test_api_key_generator_secure.py  test_api_key_persistence.py  test_api_key_policy_migration.py  test_api_key_screen.py  test_campaign_analysis.py  test_config_loader.py  test_connection_manager_api_keys.py  test_connection_manager_policy.py  test_connection_panel_integration.py  test_data_dictionary.py  test_data_parsing.py  test_dshield_client.py  test_dshield_client_clean.py  test_dshield_client_old.py  test_elasticsearch_client.py  test_enhanced_threat_intelligence.py  test_enhanced_tui_detection.py  test_error_handling.py  test_graceful_degradation.py  test_handler_methods.py  test_latex_template_tools.py  test_live_metrics_panel.py  test_log_buffer.py  test_log_panel_integration.py  test_mcp_compliance.py  test_mcp_schema_validator.py  test_mcp_server.py  test_mcp_server_refactored.py  test_mcp_server_refactored_simple.py  test_metrics_formatter.py  test_metrics_subscriber.py  test_models.py  test_onepassword_basic.py  test_onepassword_cli_manager.py  test_onepassword_cli_manager_focused.py  test_op_secrets.py  test_pagination.py  (+17 more)
(+205 files in other folders)
